Avoid overflow logo on small screens

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -1,6 +1,10 @@
 /* your custom css */
 
 @media only screen and (min-device-width: 360px) and (max-device-width: 736px) {
+  img.logo {
+    max-width: 10em;
+    height: auto !important;
+  }
 }
 
 @media only screen and (min-width: 1024px) {
